# oz_assignment

./: README.md
Database/day_1/: chapter01_06.ipynb
Database/day_2/: chapter07_13.ipynb
Database/day_3/: database_day_3.sql
Database/day_4/: creat.sql  create.sql  delete.sql  read.sql  test_pymysql.py  update.sql
Flask/Day_2/: api.py  schemas.py
Flask/Day_3/: app.py  db.py  models.py
Flask/Day_4/: app.py  db.yaml
Git/day_1/: back.yaml  fullstack.yaml  oz_AI.yaml
Git_challenge/day_1/: fullstack.yaml  oz_service.yaml
HTML_CSS/Admin_페이지_프론트단_프로젝트/: admin.html  admin_project.html  회원가입.html
HTML_CSS/day_1/: form.html  profile.html  sample.html
HTML_CSS/day_2/: css_test.html  monster.html  profile.css  (+1 more)
OZ_DJANGO/: db.sqlite3  pyproject.toml
Python_challenge/: Bungeoppang.py
django_oz/: README.md  db.sqlite3  pyproject.toml
django_oz/boards/: admin.py  models.py
django_oz/boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
django_oz/common/: models.py
django_oz/config/: authentication.py  settings.py  urls.py
django_oz/feeds/: models.py  serializers.py  tests.py  urls.py  views.py
django_oz/feeds/migrations/: 0001_initial.py
django_oz/reviews/: serializers.py  tests.py  urls.py  views.py
django_oz/reviews/migrations/: 0001_initial.py
django_oz/users/: admin.py  models.py  serializers.py  urls.py  views.py
django_oz/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py  0004_alter_user_grade.py
(+61 files in other folders)
